# algorithm-nexus

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml  requirements-candidate.txt  requirements-ecosystem.txt  requirements-product.txt  zensical.toml
.agents/skills/add-nexus-package/: SKILL.md
docs/: index.md
docs/contributing/: add_benchmark.md  add_new_nexus_package.md  index.md  owner_responsibilities.md
docs/design/: benchmark_integration_design.md  benchmark_metadata_convention.md  benchmark_system.md  dependency-resolution.md  index.md  nexus_package.md  project_release.md
docs/getting-started/: cli-reference.md  index.md  installation.md
docs/requirements/: benchmark.md  index.md  models_testing.md  nexus_package.md  packaging_and_dependency_reqs.md
docs/stylesheets/: extra.css
src/algorithm_nexus/: cli.py  models.py  validation.py
src/algorithm_nexus/commands/: ado_validator.py  benchmark_manager.py  list.py  run.py  utils.py  validate.py  venv_manager.py
tests/: test_cli_run.py  test_cli_validation.py  test_validate_benchmarks.py
