[project]
name = "algorithm-nexus"
version = "0.1.0"
description = "A comprehensive library for AI model delivery, testing, and benchmarking"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license-files = ["LICENSE"]
authors = [{ name = "Christian Pinto", email = "christian.pinto@ibm.com" }]
maintainers = [{ name = "Christian Pinto", email = "christian.pinto@ibm.com" }]

[project.urls]
Homepage = "https://github.com/IBM/algorithm-nexus"
Issues = "https://github.com/IBM/algorithm-nexus/issues"
Repository = "https://github.com/IBM/algorithm-nexus"

[project.scripts]
nexus = "algorithm_nexus.cli:main"

[project.optional-dependencies]
candidate = [
  "terratorch[vllm]==1.2.8",
  "vllm==0.23.0",
]
cli = [
  "ado-core>=1.8.0",
  "pydantic>=2.13.3",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.25.0",
]
ecosystem = [
  "bmfm-targets",
  "gridfm-graphkit==0.8.0rc3",
  "terratorch>=1.2.7",
  "tokamind",
]
product = [
  "terratorch[vllm]==1.2.8",
  "vllm==0.21.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "codespell>=2.4.0",
  "detect-secrets @ git+https://github.com/ibm/detect-secrets.git",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
  "zensical>=0.0.40",
]
test = [
  "pytest>=9.0.3",
]

[tool.uv]
package = true
conflicts = [
  [
    { extra = "ecosystem" },
    { extra = "candidate" },
    { extra = "product" },
  ],
]
# gridfm-graphkit==0.8.0rc3 pins gridfm-datakit==1.0.5rc1 (a prerelease, needed
# to skip 1.0.4's broken gridfm-datakit-winblock marker). Under uv's default
# prerelease mode (if-necessary-or-explicit), gridfm-graphkit resolves fine
# (first-party explicit pin), but gridfm-datakit's rc pin lives *inside*
# graphkit (transitive), so it isn't treated as explicit. Surface it as a
# first-party constraint to make the prerelease explicit - without declaring it
# as a dedicated dependency. Drop once a stable gridfm-datakit/graphkit ships.
# See https://github.com/gridfm/gridfm-graphkit/issues/81
constraint-dependencies = ["gridfm-datakit==1.0.5rc1"]

[tool.uv.sources]
bmfm-targets = { git = "https://github.com/BiomedSciAI/biomed-multi-omic.git" }
tokamind = { git = "https://github.com/UKAEA-IBM-STFC-Fusion-FMs/tokamind", tag = "OS_v2.0" }
